--- a/src/app/cooldash/pages/dashboard/dashboard.component.html
+++ b/src/app/cooldash/pages/dashboard/dashboard.component.html
@@ -209,9 +209,17 @@
         </div>
         <!-- Card Body -->
         <div class="card-body">
-          <div class="chart-area">
+          <!-- <fusioncharts
+            [type]="type"
+            [width]="width"
+            [height]="height"
+            [dataSource]="dataSource"
+          >
+          </fusioncharts> -->
+
+          <!-- <div class="chart-area">
             <canvas id="myAreaChart"></canvas>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
