--- a/src/app/cooldash/components/sidebar/sidebar.component.html
+++ b/src/app/cooldash/components/sidebar/sidebar.component.html
@@ -8,7 +8,7 @@
     </div>
     <div class="sidebar-brand-text mx-3">
       <figure>
-        <img src="assets/img/ms-icon-310x310.png" />
+        <img src="assets/img/vengo logo.png" />
         <!-- <span class="logo-bold">Dash</span> -->
       </figure>
     </div>
@@ -16,31 +16,7 @@
 
   <!-- Divider -->
   <hr class="sidebar-divider my-0" />
-  <!--  <div class="sidebar-heading">-->
-  <!--    Addons-->
-  <!--  </div>-->
 
-  <!-- <ng-container *ngFor="let item of menuItems; let i = index">
-    <li
-      *ngIf="
-        role == 'SuperAdmin' ||
-        (role == 'Merchant' &&
-          (item.path == '/b2b/products' || item.path == '/b2b/order')) ||
-        (role == 'SubAdmin' &&
-          access.read == true &&
-          item.path !== '/b2b/sub-admin')
-      "
-      routerLink="{{ item.path }}"
-      routerLinkActive="active"
-      class="nav-item"
-    >
-      <a class="nav-link" href="javascript:void(0)">
-        <img [src]="item.icon" />
-        <span>{{ item.title }}</span></a
-      >
-    </li>
-  </ng-container> -->
-  <!-- Nav Item - Charts -->
   <ng-container *ngFor="let item of menuItems">
     <li *ngIf="item.class == 'sub'" routerLink="{{ item.path }}" routerLinkActive="active" class="nav-item">
       <a class="nav-link" href="javascript:void(0)">
