--- a/src/app/cooldash/pages/restaurant/order/order.component.html
+++ b/src/app/cooldash/pages/restaurant/order/order.component.html
@@ -27,16 +27,17 @@
               <th>#</th>
               <th>Order No.</th>
               <th>Address</th>
-              <th>Total Amount</th>
-              <th>Driver Name</th>
-              <th>User Name</th>
-              <th>Restaurant Name</th>
-              <th>Items</th>
-              <th>Status</th>
-              <th>Order Type</th>
-              <th>Delivery Date</th>
-
-              <th>Order Date</th>
+              <th class="text-nowrap">Total Amount</th>
+              <th class="text-nowrap">Driver Name</th>
+              <th class="text-nowrap">User Name</th>
+              <th class="text-nowrap">Restaurant Name</th>
+              <th class="text-nowrap">preparation Instruction</th>
+              <th class="text-nowrap">Items</th>
+              <th class="text-nowrap">Status</th>
+              <th class="text-nowrap">Order Type</th>
+              <th class="text-nowrap">Delivery Date</th>
+ 
+              <th class="text-nowrap">Order Date</th>
               <th>Action</th>
             </tr>
           </thead>
@@ -82,6 +83,11 @@
               <td>
                 <ng-container *ngIf="item.restaurantId">
                   {{ item.restaurantId.name }}
+                </ng-container>
+              </td>
+              <td>
+                <ng-container *ngIf="item.restaurantId">
+                  {{ item.note||'--' }}
                 </ng-container>
               </td>
               <td>
